--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
   <head>
     <meta charset="utf-8">
     <title>vue-nctulib</title>
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   </head>
   <body>
     <div id="app"></div>
