--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -5,6 +5,15 @@
     <title>vue-nctulib</title>
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83736349-6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-83736349-6');
+    </script>
   </head>
   <body>
     <div id="app"></div>
