--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -2,7 +2,7 @@
 <html style="height:100%">
   <head>
     <meta charset="utf-8">
-    <title>vue-nctulib</title>
+    <title>NCTU Library Search for Humans</title>
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
