--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -8,7 +8,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nctulib.louie.lu">
     <meta property="og:title" content="NCTU Library Search for Humans">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://i.imgur.com/t4lTxLh.png">
+    <meta property="og:description" content="符合人性的交通大學館藏搜尋系統 / 台灣聯大系統館藏搜尋系統。搜尋包括交通大學、清華大學、陽明大學以及中央大學的台灣聯大系統圖書館資源。NCTU Library Search for Humans. Also search for UST library system, including NCTU, NTHU, NYMU, NCU.">
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83736349-6"></script>
     <script>
