Correct first search bar vertical align

--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -26,7 +26,7 @@
     <footer class="footer">
       <div class="container">
         <span class="text-muted">Correct your search experiment.</span>
-        <span class="text-muted">Create by <a href="https://louie.lu">Louie Lu</a>.</span>
+        <span class="text-muted">By <a href="https://louie.lu">Louie Lu</a>.</span>
         <span class="text-muted">Open Source at <a href="https://github.com/mlouielu/nctulib">GitHub</a>.</span>
       </div>
     </footer>
