Add intersection-observer polyfill from w3c

--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -19,6 +19,7 @@
 
       gtag('config', 'UA-83736349-6');
     </script>
+    <script src="/static/intersection-observer.js"></script>
   </head>
   <body>
     <div id="app"></div>
