--- a/vue-nctulib/index.html
+++ b/vue-nctulib/index.html
@@ -29,6 +29,7 @@
         <span class="text-muted">Correct your search experiment.</span>
         <span class="text-muted">By <a href="https://louie.lu">Louie Lu</a>.</span>
         <span class="text-muted">Open Source at <a href="https://github.com/mlouielu/nctulib">GitHub</a>.</span>
+        <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fnctulib.louie.lu&layout=button_count&size=small&mobile_iframe=true&appId=1971757033055474&width=70&height=20" width="70" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
       </div>
     </footer>
   </body>
